test/compile_errors/err_task_let_underscore.w
//! expect-error: not the detach spelling

async fn warm_cache() -> i32:
    42

fn main:
    let _ = warm_cache()
